Bug 167128 - Manage Changes dialog does not enable [Accept] / [Reject] buttons initially
Summary: Manage Changes dialog does not enable [Accept] / [Reject] buttons initially
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords:
Depends on:
Blocks: Manage-Changes-Dialog
  Show dependency treegraph
 
Reported: 2025-06-20 09:32 UTC by Mike Kaganski
Modified: 2025-06-20 22:12 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Three tracked changes (2.50 KB, application/vnd.oasis.opendocument.text)
2025-06-20 09:32 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-06-20 09:32:52 UTC
Created attachment 201375 [details]
Three tracked changes

Open the attached document. It has three tracked changes. Open Edit->Track Changes->Manage.

The Manage Changes dialog has the three changes listed; the first one is selected; the cursor in the main document area has jumped to the change selected in the dialog; but: the [Accept] and [Reject] buttons in the dialog are not enabled.

Only selecting it again (or a different entry) would enable the buttons.
Comment 1 Mike Kaganski 2025-06-20 09:35:11 UTC
https://gerrit.libreoffice.org/c/core/+/186752
Comment 2 Commit Notification 2025-06-20 12:37:15 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6fe35fdbd39cee17cb1f4fc9494520e2bdcabcba

tdf#167128: SwRedlineAcceptDlg: move enabling controls after selection

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-20 15:47:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5d94b9e26e6f2b30acb8a406bd7fb7bf8fe86ad

tdf#167128: sw: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-06-20 18:19:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/baac4aadebf20fcd2b68a9e867534eab332b0976

tdf#167128: SwRedlineAcceptDlg: move enabling controls after selection

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-06-20 22:12:32 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/a56c6315c0b7969711e7da5d722d1f28c0e72ddf

tdf#167128: sw: Add UItest

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.